# embedded-tsdb

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust-server.yml  rust.yml
binaries/client/: Cargo.toml
binaries/client/src/: lib.rs  main.rs  print_helper.rs
binaries/server/: Cargo.toml
binaries/server/src/: main.rs  server.rs
cli/: Cargo.toml  README.md  build.rs
cli/proto/: exec.proto
cli/src/api/: exec.rs
cli/src/commands/: exec.rs
docs/: cross-compile.md
embedded-tsdb/: Cargo.toml
embedded-tsdb/src/: lib.rs
