[workspace]
members = [
    "crates/types",
    "crates/storage",
    "crates/meta",
    "crates/query-engine",
    "embedded-tsdb",
    "binaries/server",
    "binaries/client",
]

exclude = [
    "cli",
#    "binaries/server",
#    "binaries/client",
]


[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
arrow = "41.0.0"
geoarrow = { package = "geoarrow2", version = "0.0.1" }
datafusion = "26.0.0"
sled = "0.34.7"
tracing = "0.1.37"
thiserror = "1.0.40"


