[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9.2"
prost = "0.11.9"
clap = { version = "4", features = ["derive"] }
tracing = "0.1.37"
anyhow = "1.0.71"

[build-dependencies]
tonic-build = { version = "0.9.2", optional = true }

[features]
default = ["build"]
build = ["dep:tonic-build"]