[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.10.0"
prost = "0.12.0"
clap = { version = "4", features = ["derive"] }
tracing = { worksapce = true }
anyhow = "1.0.71"

[build-dependencies]
tonic-build = { version = "0.10.0", optional = true }

[features]
default = ["build"]
build = ["dep:tonic-build"]