[package]
name = "embedded-tsdb"
version = "0.0.0"
edition = "2021"
description = "Light-weight embedded TSDB."
documentation = "https://docs.rs/embedded-tsdb"
license = "Apache-2.0"
repository = "https://github.com/egccri/mbedded-tsdb"
readme = "README.md"
authors = ["The embedded-tsdb authors."]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workdspace = true }
thiserror = { workspace = true }
