[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "embedded-tsdb-client"
path = "src/main.rs"

[dependencies]
cli = { path = "../../cli", default-features = false }
tokio = { version = "1", features = ["full"] }
tonic = "0.9.2"
prost = "0.11.9"
clap = { version = "4", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
anyhow = "1.0.71"
