[package]
name = "embedded-tsdb-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli = { path = "../../cli", default-features = false }
embedded-tsdb = { path = "../../embedded-tsdb" }
tokio = { version = "1", features = ["full"] }
tonic = "0.10.0"
prost = "0.12.0"
clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = "0.3.17"
anyhow = "1.0.71"

